@@ -3,6 +3,8 @@
 - Fix typos and scoping in Spec::ApiBuilder
 - Typed parameters can be set as protected, i.e. their values are to be
   visually hidden (like passwords)
+- ActiveRecord adapter: resolve URL parameters using the Show action as
+  a fallback
 
 * Fri Nov 25 2016 - version 0.7.1
 - Require haveapi-client 0.7.0
